# filesystem-mcp

./: .assess-fix-timestamp  .cursorignore  .cursorrules  .env.example  .gitignore  .mcpbignore  .pre-commit-config.yaml  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FASTMCP_2_12_COMPLIANCE_COMPLETE.md  FASTMCP_2_12_MIGRATION_PROGRESS.md  FASTMCP_2_12_MIGRATION_SUMMARY.md  FILESYSTEM_MCP_TOOLS_LIST.md  FIX_TODO_2026-07-06-idle-wedge.md  INSTALL.md  LICENSE  MIGRATION_PLAN_FASTMCP_2_12.md  README.md  RELEASE_NOTES.md  THREE_FILESYSTEM_MCP_COMPARISON.md  TOOLS_COMPARISON.md  biome.json  build.ps1  debug_modules.py  extension.toml  final_check.py  final_test.py  final_workflow_test.py  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  mcpb.json  mcpb_manifest.json  mcpb_manifest.json.backup  (+18 more)
.cursor/rules/: general.md
.github/: CODEOWNERS  FUNDING.yml  RELEASE_TEMPLATE.md  SECURITY.md  codeql-config.yml  dependabot.yml.disabled  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security_report.md
.github/workflows/: build-dxt.yml  ci-cd.yml  codeql.yml  dependency-review.yml  industrial-launch.yml  issue-management.yml  release.yml  stale.yml
_llm_test_scripts/: debug_routes.py  test_error_responses.py
assets/prompts/: configuration.md  docker_management.md  examples.json  file_operations.md  quick-start.md  troubleshooting.md  user.md
docs/: MCP_PRODUCTION_CHECKLIST.md  repository-analysis-2025-10-26.md
docs/adn-notes/: SEP-1577-in-Filesystem-MCP-Agentic-File-Management.md
dxt/: DXT_PACKAGE_BUILT.md  MCPB_PACKAGE_BUILT.md  dxt.json  manifest.json
dxt/prompts/: examples.json  system.md  user.md
filesystem_mcp/: __init__.py  __main__.py  app.py
filesystem_mcp/tools/: __init__.py  docker_operations.py  register_tools.py
filesystem_mcp/tools/file_operations/: __init__.py
filesystem_mcp/tools/repo_operations/: __init__.py
mcpb/: manifest.json
mcpb/assets/prompts/: examples.json  git_workflows.md  security_permissions.md  system.md  troubleshooting.md  user.md
mcpb/server/: server.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: build-dxt.ps1  build-mcpb.ps1  cua-nsis-config.json  cua-smoke.py  fix-standards.ps1
src/: lib.rs
src/filesystem_mcp/: __init__.py  __init__.py.backup  __main__.py  app.py  app.py.bak  concurrency.py  mcp_server.py.bak  server.py  transport.py
src/filesystem_mcp/tools/: __init__.py  agentic_file_workflow.py  agentic_file_workflow.py.backup  portmanteau_container.py  portmanteau_container_20260302_034508.py.bak  portmanteau_directory.py  portmanteau_directory_20260302_034537.py.bak  portmanteau_docker.py.bak  portmanteau_file.py  portmanteau_file.py.backup  portmanteau_file_20260225_220421.py.bak  portmanteau_file_20260225_220431.py.bak  portmanteau_file_20260225_220441.py.bak  portmanteau_file_20260225_220453.py.bak  portmanteau_file_20260225_220500.py.bak  portmanteau_file_20260225_220606.py.bak  portmanteau_file_20260227_135302.py.bak  portmanteau_file_20260227_135307.py.bak  portmanteau_file_20260227_135313.py.bak  portmanteau_file_20260302_031734.py.bak  portmanteau_file_20260406_200930.py.bak  portmanteau_file_20260406_200936.py.bak  portmanteau_file_20260406_200942.py.bak  portmanteau_file_20260406_200947.py.bak  portmanteau_file_20260406_200954.py.bak  portmanteau_file_20260406_201007.py.bak  portmanteau_file_20260406_201044.py.bak  portmanteau_file_20260406_201056.py.bak  portmanteau_file_safe.py  portmanteau_file_safe_20260406_201112.py.bak  portmanteau_filesystem.py.bak  portmanteau_git_mgmt.py  portmanteau_git_mgmt_20260316_154116.py.bak  portmanteau_git_mgmt_20260316_154139.py.bak  portmanteau_git_mgmt_20260316_154147.py.bak  portmanteau_git_mgmt_20260316_154155.py.bak  portmanteau_git_mgmt_20260406_194404.py.bak  portmanteau_host.py  portmanteau_host.py.backup  portmanteau_infrastructure.py  (+18 more)
src/filesystem_mcp/tools/docker_operations/: __init__.py  compose.py  containers.py  images.py  networks_volumes.py
src/filesystem_mcp/tools/file_operations/: __init__.py
src/filesystem_mcp/tools/repo_operations/: __init__.py
src/filesystem_mcp/tools/system_tools/: __init__.py
test_utils/: __init__.py  mcp_mock.py
tests/: __init__.py  conftest.py
tests/integration/: test_workflow_scenarios.py
tests/unit/: test_docker_operations.py  test_docker_operations_fixed.py  test_docker_operations_new.py  test_enhanced_responses.py  test_file_operations.py  test_file_operations.py.backup  test_file_operations.py.broken  test_file_operations_fixed.py  test_file_operations_new.py  test_repo_operations.py  test_sampling_integration.py  test_system_tools.py  test_system_tools_new.py
tests/utils/: mcp_mock.py
webapp/: package-lock.json  package.json  start.ps1  stop.ps1  tailwind.config.js  tsconfig.app.json  vite.config.ts
webapp/backend/: requirements.txt
webapp/backend/bridge/: main.py
webapp/src/: App.tsx  index.css
webapp/src/components/: layout.tsx
webapp/src/hooks/: useZoom.ts
webapp/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  docker-ops.tsx  file-browser.tsx  git-ops.tsx  help.tsx  logs.tsx  settings.tsx  tools.tsx
webapp/src/shared/: mcp-client.ts  mcp-provider.tsx
webapp/src/store/: connection.ts
webapp/src/types/: event-source-polyfill.d.ts
